added address box beta

--- a/index.html
+++ b/index.html
@@ -30,11 +30,13 @@
         </ul>
     </nav>
     
-    <div class="address-box">
-        <h2>0x15wfwdgwr13gf345r</h2>
-        <button>Copy to clipboard</button>
+    <div class="address-card-wrapper">
+        <div class="address-card-inner">
+            <h2>0x89f052a13E4d7f47721929943e
+                <button>Copy to clipboard</button>
+            </h2>
+        </div>
     </div>
-
 
     <footer>
         <div class="footer-content">
